@@ -12,14 +12,17 @@
               express or implied warranty.
 ---------------------------------------------------------------------------- 
 $RCSfile: OrderedCltn.cc,v $
-$Revision: 1.2 $
-$Author: bert $
-$Date: 2003-04-16 18:41:46 $
+$Revision: 1.3 $
+$Author: jason $
+$Date: 2004-01-19 15:38:15 $
 $State: Exp $
 --------------------------------------------------------------------------*/
 #include <iostream>		// (bert) changed from iostream.h
 using namespace std;		// (bert) added
+
+#ifdef HAVE_MALLOC_H
 #include <malloc.h>
+#endif
 
 #include "OrderedCltn.h"
 
